chore: added common package

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ dist
 coverage/
 packages/daemon/dist
 packages/daemon/node_modules
+packages/common/node_modules
 packages/wallet-service/node_modules
 packages/wallet-service/.serverless
 packages/wallet-service/.webpack
